--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "signdatamicroservice",
-  "version": "1.0.0",
-  "description": "what this code do?",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "signdatamicroservice",
+    "version": "1.0.0",
+    "description": "what this code do?",
+    "main": "main.js",
+    "scripts": {
+        "nodemon": "npx nodemon main.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "web3": "^1.9.0"
+    }
 }
